--- a/config
+++ b/config
@@ -116,11 +116,12 @@ bindsym Mod1+a focus parent
 #bindsym Mod1+d focus child
 
 # move the currently focused window to the scratchpad
-#bindsym Mod1+Shift+minus move scratchpad
-bindsym $mod+Shift+minus floating enable, resize set width 1500 height 1000, move scratchpad
+bindsym Mod1+Shift+minus move scratchpad
+#bindsym $mod+Shift+minus floating enable, resize set width 1500 height 1000, move scratchpad
 # Show the next scratchpad window or hide the focused scratchpad window.
 # If there are multiple scratchpad windows, this command cycles through them.
 bindsym Mod1+minus scratchpad show
+
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
@@ -227,3 +228,20 @@ default_border pixel 1
 default_floating_border pixel 1
 # Borders  
 for_window [class="^.*"] border pixel 1 
+
+set $xdisplay 1778
+set $ydisplay 1000
+#scratch pad drowdown
+exec --no-startup-id discord
+bindsym $mod+Shift+d [class="discord"] scratchpad show; resize set $xdisplay $ydisplay; move position center;
+for_window [class="discord"] move scratchpad;
+
+#scratch pad drowdown
+exec --no-startup-id alacritty --class scratchTerm,scratchTerm -e tmux
+bindsym $mod+o [class="scratchTerm"] scratchpad show; resize set $xdisplay $ydisplay; move position center;
+for_window [class="scratchTerm"] move scratchpad
+
+#scratchpad ai
+exec --no-startup-id chromium --class="synonym_ai" https://chat.openai.com/chat
+bindsym $mod+u [class="synonym_ai"] scratchpad show; resize set $xdisplay $ydisplay; move position center;
+for_window [class="synonym_ai"] move scratchpad
