--- a/config
+++ b/config
@@ -229,19 +229,31 @@ default_floating_border pixel 1
 # Borders  
 for_window [class="^.*"] border pixel 1 
 
-set $xdisplay 1778
+set $xdisplay 1500
 set $ydisplay 1000
-#scratch pad drowdown
+
+#scratchpad discord
 exec --no-startup-id discord
 bindsym $mod+Shift+d [class="discord"] scratchpad show; [class="discord"] resize set $xdisplay $ydisplay; move position center;
 for_window [class="discord"] move scratchpad;
 
-#scratch pad drowdown
+#scratchpad alacritty tmux
 exec --no-startup-id alacritty --class scratchTerm,scratchTerm -e tmux
-bindsym $mod+o [class="scratchTerm"] scratchpad show; [class="scratchTerm"] resize set $xdisplay $ydisplay; move position center;
+bindsym $mod+o [class="scratchTerm"] scratchpad show; [class="scratchTerm"] resize set 1800 1200; move position center;
 for_window [class="scratchTerm"] move scratchpad
 
 #scratchpad ai
 exec --no-startup-id chromium --class="synonym_ai" https://chat.openai.com/chat
 bindsym $mod+u [class="synonym_ai"] scratchpad show; [class="synonym_ai"] resize set $xdisplay $ydisplay; move position center;
 for_window [class="synonym_ai"] move scratchpad
+
+set $xdisplayNotes 1800
+set $ydisplayNotes 1150
+#scratchpad notetaking
+exec --no-startup-id xournalpp
+bindsym $mod+i [class="Xournalpp"] scratchpad show; [class="Xournalpp"] resize set $xdisplayNotes $ydisplayNotes; move position center;
+for_window [class="Xournalpp"] move scratchpad
+
+
+bindsym $mod+Shift+n exec nvim
+bindsym $mod+Shift+m exec brightnessctl set 5%-
